# server/exposures/cmaq.py
@@ -18,20 +18,22 @@ class CmaqExposures(object):
 
     def is_valid_date_range(self, **kwargs):
         session = Session()
-        min_date = session.query(ExposureList.utc_min_date_time).filter(
-            ExposureList.variable == kwargs.get('variable')).one()
-        max_date = session.query(ExposureList.utc_max_date_time).filter(
-            ExposureList.variable == kwargs.get('variable')).one()
-        session.close()
-        if min_date[0].date() > datetime.strptime(kwargs.get('end_date'), "%Y-%m-%d").date():
-            return False
-        elif max_date[0].date() < datetime.strptime(kwargs.get('start_date'), "%Y-%m-%d").date():
-            return False
-        elif datetime.strptime(kwargs.get('start_date'), "%Y-%m-%d").date() > \
-                datetime.strptime(kwargs.get('end_date'), "%Y-%m-%d").date():
-            return False
-        else:
-            return True
+        var_set = kwargs.get('variable').split(';')
+        for var in var_set:
+            min_date = session.query(ExposureList.utc_min_date_time).filter(
+                ExposureList.variable == var).one()
+            max_date = session.query(ExposureList.utc_max_date_time).filter(
+                ExposureList.variable == var).one()
+            session.close()
+            if min_date[0].date() > datetime.strptime(kwargs.get('end_date'), "%Y-%m-%d").date():
+                return False
+            elif max_date[0].date() < datetime.strptime(kwargs.get('start_date'), "%Y-%m-%d").date():
+                return False
+            elif datetime.strptime(kwargs.get('start_date'), "%Y-%m-%d").date() > \
+                    datetime.strptime(kwargs.get('end_date'), "%Y-%m-%d").date():
+                return False
+
+        return True
 
     def is_valid_lat_lon(self, **kwargs):
         # lat: 0 to +/- 90, lon: 0 to +/- 180 as lat,lon
@@ -46,28 +48,32 @@ class CmaqExposures(object):
     def is_valid_resolution(self, **kwargs):
         res_set = set()
         session = Session()
-        res = session.query(ExposureList.resolution).filter(
-            ExposureList.variable == kwargs.get('variable')).one()
-        session.close()
-        for item in res:
-            res_set.update(item.split(';'))
-        if kwargs.get('resolution') in res_set:
-            return True
-        else:
-            return False
+        var_set = kwargs.get('variable').split(';')
+        for var in var_set:
+            res = session.query(ExposureList.resolution).filter(
+                ExposureList.variable == var).one()
+            session.close()
+            for item in res:
+                res_set.update(item.split(';'))
+            if kwargs.get('resolution') not in res_set:
+                return False
+
+        return True
 
     def is_valid_aggregation(self, **kwargs):
         agg_set = set()
         session = Session()
-        agg = session.query(ExposureList.aggregation).filter(
-            ExposureList.variable == kwargs.get('variable')).one()
-        session.close()
-        for item in agg:
-            agg_set.update(item.split(';'))
-        if kwargs.get('aggregation') in agg_set:
-            return True
-        else:
-            return False
+        var_set = kwargs.get('variable').split(';')
+        for var in var_set:
+            agg = session.query(ExposureList.aggregation).filter(
+                ExposureList.variable == var).one()
+            session.close()
+            for item in agg:
+                agg_set.update(item.split(';'))
+            if kwargs.get('aggregation') not in agg_set:
+                return False
+
+        return True
 
     def is_valid_utc_offset(self, **kwargs):
         off_set = {'utc', 'eastern', 'central', 'mountain', 'pacific'}
@@ -102,15 +108,6 @@ class CmaqExposures(object):
         is_valid, message = self.validate_parameters(**kwargs)
         if not is_valid:
             return message
-        # determine exposure type to query
-        exposure = kwargs.get('variable')
-        # set resolution and aggregate to query
-        if kwargs.get('resolution') == 'day':
-            exposure += '_' + kwargs.get('aggregation') + '_24hr'
-        elif kwargs.get('resolution') == '7day':
-            exposure += '_' + kwargs.get('aggregation') + '_7day'
-        elif kwargs.get('resolution') == '14day':
-            exposure += '_' + kwargs.get('aggregation') + '_14day'
         # create data object
         data = {}
         data['values'] = []
@@ -123,34 +120,49 @@ class CmaqExposures(object):
         end_time = datetime.strptime(kwargs.get('end_date'), "%Y-%m-%d") + timedelta(hours=23)
         # retrieve query result for each lat,lon pair and add to data object
         lat_lon_set = kwargs.get('lat_lon').split(';')
+        var_set = kwargs.get('variable').split(';')
         for lat_lon in lat_lon_set:
             coords = lat_lon.split(',')
             row, col = latlon2rowcol(coords[0], coords[1], str(start_time.year))
-            session = Session()
-            if kwargs.get('resolution') == 'hour':
-                # hourly resolution of data - return all hours for date range
-                query = session.query(ExposureDatum.id,
-                                      ExposureDatum.utc_date_time,
-                                      getattr(ExposureDatum, exposure)). \
-                    filter(ExposureDatum.utc_date_time >= start_time + timedelta(hours=utc_offset)). \
-                    filter(ExposureDatum.utc_date_time <= end_time + timedelta(hours=utc_offset)). \
-                    filter(ExposureDatum.row == row). \
-                    filter(ExposureDatum.col == col)
-            else:
-                # daily resolution of data - return only matched hours for date range
-                query = session.query(ExposureDatum.id,
-                                      ExposureDatum.utc_date_time,
-                                      getattr(ExposureDatum, exposure)).\
-                    filter(ExposureDatum.utc_date_time >= start_time + timedelta(hours=utc_offset)).\
-                    filter(ExposureDatum.utc_date_time <= end_time + timedelta(hours=utc_offset)).\
-                    filter(ExposureDatum.row == row).\
-                    filter(ExposureDatum.col == col).\
-                    filter(extract('hour', ExposureDatum.utc_date_time) == utc_offset)
-            session.close()
-            # add query output to data object in JSON structured format
-            for cmaq_id, cmaq_date_time, cmaq_exp in query:
-                # print(cmaq_id, cmaq_date_time, cmaq_exp)
-                data['values'].append({'date_time': cmaq_date_time,
+            # print(row,col)
+            for var in var_set:
+                # determine exposure type to query
+                exposure = var
+                # set resolution and aggregate to query
+                if kwargs.get('resolution') == 'day':
+                    exposure += '_' + kwargs.get('aggregation') + '_24hr'
+                elif kwargs.get('resolution') == '7day':
+                    exposure += '_' + kwargs.get('aggregation') + '_7day'
+                elif kwargs.get('resolution') == '14day':
+                    exposure += '_' + kwargs.get('aggregation') + '_14day'
+                session = Session()
+                if kwargs.get('resolution') == 'hour':
+                    # hourly resolution of data - return all hours for date range
+                    query = session.query(ExposureDatum.id,
+                                          ExposureDatum.utc_date_time,
+                                          getattr(ExposureDatum, exposure)). \
+                        filter(ExposureDatum.utc_date_time >= start_time + timedelta(hours=utc_offset)). \
+                        filter(ExposureDatum.utc_date_time <= end_time + timedelta(hours=utc_offset)). \
+                        filter(ExposureDatum.row == row). \
+                        filter(ExposureDatum.col == col)
+                else:
+                    # daily resolution of data - return only matched hours for date range
+                    query = session.query(ExposureDatum.id,
+                                          ExposureDatum.utc_date_time,
+                                          getattr(ExposureDatum, exposure)).\
+                        filter(ExposureDatum.utc_date_time >= start_time + timedelta(hours=utc_offset)).\
+                        filter(ExposureDatum.utc_date_time <= end_time + timedelta(hours=utc_offset)).\
+                        filter(ExposureDatum.row == row).\
+                        filter(ExposureDatum.col == col).\
+                        filter(extract('hour', ExposureDatum.utc_date_time) == utc_offset)
+                session.close()
+                # add query output to data object in JSON structured format
+                cmaq_output = []
+                for cmaq_id, cmaq_date_time, cmaq_exp in query:
+                    cmaq_output.append({'date_time': cmaq_date_time.strftime("%Y-%m-%d %H:%M:%S"),
+                                        'value': float(cmaq_exp)})
+
+                data['values'].append({'variable': var,
                                        'lat_lon': lat_lon,
-                                       'value': str(cmaq_exp)})
+                                       'cmaq_output': cmaq_output})
         return jsonify(data)
